--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=root
 password=gogotucowUp!0x
-dburl=jdbc:mysql://localhost:3306/udmysql
+dburl=jdbc:mysql://localhost:3306/udmysql?useTimezone=true&serverTimezone=UTC
 useSSL=false
